fix bug reInstallation and update docker file

--- a/base.yml
+++ b/base.yml
@@ -5,6 +5,7 @@ services:
       - db
     volumes:
       - "${MOODLE_DOCKER_WWWROOT}:/var/www/html"
+      - ./moodledata:/var/www/moodledata
       - "${ASSETDIR}/web/apache2_faildumps.conf:/etc/apache2/conf-enabled/moodle-faildump.conf"
     environment:
       MOODLE_DOCKER_RUNNING: 1
