--- a/db.pgsql.yml
+++ b/db.pgsql.yml
@@ -8,3 +8,5 @@ services:
       POSTGRES_USER: moodle
       POSTGRES_PASSWORD: "m@0dl3ing"
       POSTGRES_DB: moodle
+    volumes: 
+      - ./moodle-db-data:/var/lib/postgresql/data 
